<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_LAB_CaseData" Id="{7b26a288-e3a8-4529-8e02-0e89e7ef32e4}">
    <Declaration><![CDATA[TYPE ST_LAB_CaseData :
STRUCT
	aOuters		: ARRAY[1..3] OF ST_LAB_OuterData;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>